// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package testdata;
option go_package = "cloud.google.com/go/bigquery/storage/managedwriter/testdata";


// SimpleMessage represents a simple message that transmits a string and int64 value.
message SimpleMessage {
    // name is a simple scalar string.
    string name = 1;
    // value is a simple int64 value.
    int64 value = 2;
}


