// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package testdata;
option go_package = "cloud.google.com/go/bigquery/storage/managedwriter/testdata";


// SimpleMessageProto3 represents a simple message that transmits a string and int64 value.
message SimpleMessageProto3 {
    // name is a simple scalar string.
    string name = 1;
    // value is a simple int64 value.
    int64 value = 2;
}


message GithubArchiveEntityProto3 {
    int64 id = 1;
    string login = 2;
    string gravatar_id = 3;
    string avatar_url = 4;
    string url = 5;
}

message GithubArchiveRepoProto3 {
    int64 id = 1;
    string name = 2;
    string url = 3;
}

// GithubArchiveMessageProto3 is the proto3 version of github archive row.
message GithubArchiveMessageProto3 {
    string type = 1;
    bool public = 2;
    string payload = 3;
    GithubArchiveRepoProto3 repo = 4;
    GithubArchiveEntityProto3 actor = 5;
    GithubArchiveEntityProto3 org = 6;
    int64 created_at = 7;
    string id = 8;
    string other = 9;
}

